# toy-manipulator

./: .gitignore  .gitmodules  LICENSE  README.md
firmware/: CMakeLists.txt  Makefile  README.md
firmware/inc/: clock.h  stm32f1xx.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
firmware/src/: clock.c  interrupts.c  main.c  stm32f1xx_it.c
